--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "mongoose": "^6.8.0",
     "next": "latest",
