--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@reduxjs/toolkit": "^1.9.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
@@ -17,7 +18,8 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
