--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
@@ -15,6 +16,7 @@
     "@mui/x-date-pickers": "^5.0.11",
     "@next/font": "^13.0.7",
     "@reduxjs/toolkit": "^1.9.1",
+    "antd": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
