--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
@@ -28,6 +29,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5"
   },
