Setup Ract Beautiful DnD and cleanup

--- a/package.json
+++ b/package.json
@@ -6,21 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.8.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.0",
-    "@mui/x-date-pickers": "^5.0.11",
     "@next/font": "^13.0.7",
     "@reduxjs/toolkit": "^1.9.1",
-    "antd": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
-    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "mongoose": "^6.8.0",
     "next": "latest",
@@ -31,7 +25,8 @@
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
