--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "^13.0.7",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
