--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "mongoose": "^6.8.0",
     "next": "latest",
