--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "^13.0.7",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.9.1",
-    "axios": "^1.2.1",
+    "@sentry/nextjs": "^7.28.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
