--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.8.0",
     "next": "latest",
     "next-auth": "^4.18.5",
+    "next-redux-wrapper": "^8.1.0",
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
