--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@sentry/nextjs": "^7.28.1",
+    "@tailwindcss/forms": "^0.5.3",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
