--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@sentry/nextjs": "^7.28.1",
     "@tailwindcss/forms": "^0.5.3",
+    "@tiptap/react": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
