--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
