--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "jsdom": "^21.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "next": "latest",
     "next-auth": "^4.18.5",
     "next-redux-wrapper": "^8.1.0",
     "openai": "^3.1.0",
+    "puppeteer": "^19.5.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
