--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
@@ -41,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "swr": "^2.0.0",
     "uuid": "^9.0.0"
