--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "swr": "^2.0.0"
   },
   "devDependencies": {
