--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/font": "^13.0.7",
     "@nivo/core": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "@react-pdf/renderer": "^3.0.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@sentry/nextjs": "^7.28.1",
     "@tailwindcss/forms": "^0.5.3",
@@ -24,25 +25,35 @@
     "@tanstack/react-query-devtools": "^4.22.0",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "aws-sdk": "^2.1299.0",
     "bcryptjs": "^2.4.3",
+    "busboy": "^1.6.0",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
+    "file-loader": "^6.2.0",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "jsdom": "^21.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "latest",
     "next-auth": "^4.18.5",
     "next-redux-wrapper": "^8.1.0",
     "openai": "^3.1.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.7.3",
     "puppeteer": "^19.5.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
+    "react-transition-group": "^4.4.5",
     "swr": "^2.0.0"
   },
   "devDependencies": {
